# PaperIgnitionV1

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.orchestrator  pyproject.toml
.github/workflows/: cd.yml  ci.yml
backend/: config_utils.py
backend/app/: db_utils.py  limiter.py  main.py
backend/app/auth/: schemas.py  utils.py
backend/app/crud/: user.py
backend/app/models/: papers.py  users.py
backend/app/routers/: auth.py  digests.py  favorites.py  papers.py  users.py
backend/app/services/: email.py
backend/app/utils/: index_utils.py
backend/configs/: app_config.yaml  ci_config.yaml  test_config.yaml
beta_frontend/: favorites.html  index.html  login.html  nginx.conf  nginx_mac.conf  paper.html  profile.html  register.html
beta_frontend/js/: auth.js  main.js
core/: __init__.py  generators.py  models.py  profile_pool.py  rerankers.py
core/arxiv/: __init__.py  client.py  downloader.py  html_extractor.py  pdf_extractor.py
core/prompts/: pdf_prompts.yaml  rerank_prompts.yaml  text_prompts.yaml
frontend/: README.md  index.html  nginx.conf  nginx_mac.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  router.tsx
frontend/src/api/: auth.ts  client.ts  digests.ts  favorites.ts  search.ts  users.ts
frontend/src/hooks/: useBlogContent.ts  useFavoriteIds.ts  useFavorites.ts  useFeedback.ts  useRecommendations.ts  useToggleFavorite.ts
frontend/src/lib/: constants.ts  utils.ts
frontend/src/pages/: FavoritesPage.tsx  FeedPage.tsx  ForgotPasswordPage.tsx  LoginPage.tsx  PaperPage.tsx  ProfilePage.tsx  RegisterPage.tsx  ResetPasswordPage.tsx  (+2 more)
orchestrator/: README.md  api_clients.py  generate_blog.py  orchestrator.py  paper_pull.py  rate_limiter.py  storage_util.py  utils.py
orchestrator/configs/: TODO.md  development.yaml  production.yaml
orchestrator/run/: dev.sh
scripts/: backfill_last_login.py  init_all_tables.py  profile_optimizer.py  reset_password.py  visualize_pareto.py  visualize_trajectory.py
tests/integration/: conftest.py  test_auth.py  test_digests.py  test_domains.py  test_favorites.py  test_orchestrator_storage.py  test_papers.py  test_pdf_extractor.py  test_service_auth.py
tests/unit/: test_arxiv_client.py  test_generators.py  test_models.py  test_pdf_extractor.py  test_profile_pool.py
(+19 files in other folders)
