[project]
name = "paperignition"
version = "2.0.0"
description = "AI-powered academic paper recommendation system"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.100",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "python-jose[cryptography]",
    "pwdlib[bcrypt,argon2]",
    "python-dotenv",
    "google-genai",
    "httpx",
    "tenacity",
    "pyyaml",
    "beautifulsoup4",
    "PyMuPDF",
    "PyPDF2",
    "arxiv>=2.0",
    "requests",
    "openai",
    "pydantic[email]",
    "aiosmtplib",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "httpx", "psycopg2-binary"]
pdf-ocr = ["volcengine"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*", "backend*", "orchestrator*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501", "E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
